k8s/affine/service.yml
apiVersion: v1
kind: Service
metadata:
  name: affine
  namespace: default
spec:
  selector:
    app: affine
  ports:
    - name: http
      port: 3010
      targetPort: 3010
