k8s/affine/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: affine-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - notes.zmarzuqi.dev
      secretName: affine-tls
  rules:
    - host: notes.zmarzuqi.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: affine
                port:
                  number: 3010
